fix: overlaping with the card container and the footer

--- a/src/Card.css
+++ b/src/Card.css
@@ -75,7 +75,6 @@
 }
 
 .card-container{
-  height: 90vh;
   width: 90%;
   margin: 0 auto;
   display: flex;
